about us updated still text and images and spacing fix

--- a/pages/about_us/style.css
+++ b/pages/about_us/style.css
@@ -4,3 +4,18 @@
 .educationRomy {
   display: flex;
 }
+
+.moreinfo {
+  & > * {
+    & > * {
+      display: flex;
+      gap: 20px;
+    }
+  }
+}
+.exhibitions {
+  display: flex;
+  div {
+    max-width: 50%;
+  }
+}
